<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayExpense">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="76dp"
        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginStart="177dp"
        android:layout_marginTop="41dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginStart="180dp"
        android:layout_marginTop="71dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="154dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="16dp"
        android:text="@string/details"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="76dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="38dp"
        android:text="@string/cost_1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="71dp"
        android:text="@string/date1" />

    <Button
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="142dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="154dp"
        android:text="@string/close" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="132dp"
        android:layout_height="152dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="118dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="134dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/edit" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="212dp"
        android:text="@string/receipt" />

</RelativeLayout>