<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpense">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/add"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="79dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="58dp"
        android:text="@string/name"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="79dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="116dp"
        android:text="@string/cost_1"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView81"
        android:layout_width="76dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="179dp"
        android:text="@string/date1"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="177dp"
        android:layout_marginEnd="12dp"
        android:text="@string/pick" />

    <TextView
        android:id="@+id/date"
        android:layout_width="145dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="113dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="126dp"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView101"
        android:layout_width="72dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="239dp"
        android:text="@string/receipt"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="124dp"
        android:layout_marginTop="241dp"
        android:layout_marginEnd="97dp"
        android:text="@string/choose" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="148dp"
        android:layout_marginTop="442dp"
        android:layout_marginEnd="148dp"
        android:text="@string/add" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="141dp"
        android:layout_height="136dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="294dp"
        android:layout_marginEnd="118dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/edit" />

</RelativeLayout>